--- a/work/07_component_state/demo.html
+++ b/work/07_component_state/demo.html
@@ -30,10 +30,13 @@
      */
     /*
     分解组件:
-      列表: TodoList
-        props: todos
-      应用: App
-        state: todos, inputTodo
+      App
+        TodoAdd
+        TodoList
+
+      一个状态数据应该放在哪个组件中?
+       1. 只有某个组件需要用到 --->放在此组件中
+       2. 多个组件需要用到 --->放在父组件中
      */
     /*
     问题: 完善功能
@@ -41,6 +44,85 @@
       2). 如果输入的文本两边有空格, 去掉空格后添加
     */
 
+    // 应用组件: App
+    class App extends React.Component {
+      constructor (props) {
+        super(props)
+        // 初始化状态
+        this.state = {
+          todos: ['吃饭', '睡觉', 'coding']
+        }
+        this.addTodo = this.addTodo.bind(this)
+      }
+
+      addTodo (todo) {
+        const {todos} = this.state
+        todos.unshift(todo)
+        // 更新状态
+        this.setState({todos})
+      }
+      render () {
+        const {todos} = this.state
+        return (
+          <div>
+            <TodoAdd addTodo={this.addTodo} size={todos.length}></TodoAdd>
+            <TodoList todos={todos}></TodoList>
+          </div>
+        )
+      }
+    }
+
+    // 头部组件: TodoAdd
+    class TodoAdd extends React.Component {
+
+      constructor (props) {
+        super(props)
+        this.handleClick = this.handleClick.bind(this)
+      }
+
+      handleClick () {
+        // 得到输入的todo
+        const todo = this.refs.todoInput.value
+        // 将todo保存到todos
+        this.props.addTodo(todo)
+        // 清除输入
+        this.refs.todoInput.value = ''
+      }
+
+      render () {
+        return (
+          <div>
+            <h2>Simple TODO List</h2>
+            <input type="text" ref="todoInput"/>
+            <button onClick={this.handleClick}>Add #{this.props.size}</button>
+          </div>
+        )
+      }
+    }
+    TodoAdd.propTypes = {
+      addTodo: React.PropTypes.func.isRequired,
+      size: React.PropTypes.number.isRequired
+    }
+
+    // 列表组件: TodoList
+    class TodoList extends React.Component {
+
+      render () {
+        return (
+          <ul>
+            {
+              this.props.todos.map((todo, index) => <li key={index}>{todo}</li>)
+            }
+          </ul>
+        )
+      }
+    }
+    TodoAdd.propTypes = {
+      todos: React.PropTypes.array.isRequired
+    }
+
+    // 渲染根组件标签
+    ReactDOM.render(<App />, document.getElementById('example'))
   </script>
 </body>
 </html>
