--- a/work/07_component_state/test.html
+++ b/work/07_component_state/test.html
@@ -38,6 +38,34 @@
     1. 显示h2标题, 初始文本为: 你喜欢我
     2. 点击标题更新为: 我喜欢你
   */
+  class Like extends React.Component {
+    constructor (props) {
+      super(props)
+      // 初始化状态
+      this.state = {
+        isLikeMe: true
+      }
+
+      // 绑定this为组件对象
+      this.change = this.change.bind(this)
+    }
+
+    change () {
+      // 更新状态: this.setState()
+      // this.state.isLikeMe = !this.state.isLikeMe // 不能更新更新某个状态
+      this.setState({
+        isLikeMe: !this.state.isLikeMe
+      })
+    }
+    render () {
+      console.log('render()')
+      const text = this.state.isLikeMe ? '你喜欢我' : '我喜欢你'
+      return <h2 onClick={this.change}>{text}</h2>
+    }
+  }
+
+  ReactDOM.render(<Like/>, document.getElementById('example'))
+
 </script>
 </body>
 </html>
