--- a/prepare/07_component_state/demo.html
+++ b/prepare/07_component_state/demo.html
@@ -5,19 +5,7 @@
   <title>07_state_demo</title>
 </head>
 <body>
-  <div>
-    <h2>Simple TODO List</h2>
-    <input type="text">
-    <button>Add #4</button>
-    <ul>
-      <li>吃饭</li>
-      <li>睡觉</li>
-      <li>打豆豆</li>
-    </ul>
-  </div>
-  <hr>
-
-  <div id="example">在此实现页面效果和功能</div>
+  <div id="example"></div>
 
   <script src="../js/react.js"></script>
   <script src="../js/react-dom.js"></script>
