--- a/work/08_component_controlled/test.html
+++ b/work/08_component_controlled/test.html
@@ -29,6 +29,38 @@
     3. 输入数据时, 下面的数据同步变化
   */
 
+  class Control extends React.Component {
+
+    constructor (props) {
+      super(props)
+      // 初始化状态
+      this.state = {
+        msg: 'ATGUIGU'
+      }
+
+      this.handleChange = this.handleChange.bind(this)
+    }
+
+    handleChange (event) {
+      // 得到input最新值
+      const msg = event.target.value
+      // 更新状态
+      this.setState({msg})
+    }
+
+    render() {
+      const {msg} = this.state
+      return (
+        <div>
+          <input type="text" value={msg} onChange={this.handleChange} />
+          <p>{msg}</p>
+        </div>
+      )
+    }
+  }
+
+  ReactDOM.render(<Control />, document.getElementById('example'))
+
 </script>
 </body>
 </html>
