--- a/work/10_ajax/test1.html
+++ b/work/10_ajax/test1.html
@@ -10,11 +10,12 @@
 <script src="../js/react.js"></script>
 <script src="../js/react-dom.js"></script>
 <script src="../js/babel.min.js"></script>
+<script src="https://cdn.bootcss.com/axios/0.16.2/axios.js"></script>
 <script type="text/babel">
 
 /*
 1. React没有ajax模块
-  * 集成其它的js库(如jQuery/fetch/axios), 发送ajax请求
+  * 集成其它的js库(如jQuery/axios/fetch), 发送ajax请求
 2. 使用axios
   * https://github.com/mzabriskie/axios
 3. 使用fetch:
@@ -23,6 +24,46 @@
 4. 测试url:
   * https://api.github.com/users/octocat/gists
 */
+  class UserLastGist extends React.Component {
+
+    constructor (props) {
+      super(props)
+      this.state = {
+        url: null
+      }
+    }
+
+    componentDidMount () {
+      // 发送ajax请求
+      const url = `https://api.github.com/users2/${this.props.username}/gists`
+      axios.get(url)
+        .then(response => {
+          console.log(response)
+          // 读取响应数据
+          const url = response.data[0].html_url
+          // 更新状态
+          this.setState({url})
+        })
+        .catch(function (error) {
+
+          console.log('----', error);
+        })
+    }
+
+    render () {
+      const {url} = this.state
+      if(!url) {
+        return <h2>loading...</h2>
+      } else {
+        return <p>{this.props.username}'s last gist is <a href={url}>here</a> </p>
+      }
+    }
+  }
+  UserLastGist.propTypes = {
+    username: React.PropTypes.string.isRequired
+  }
+
+  ReactDOM.render(<UserLastGist username="octocat"/>, document.getElementById('example'))
 
 </script>
 </body>
